hopefully fixes horizontal scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,10 @@ body {
     position: relative;
     line-height: 1;
     background-color: black;
+    width: 100%;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 #content {
